# crystalnet

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING  Dockerfile  Dockerfile.alpine  Dockerfile.dev  LICENSE  Makefile  Makefile.old  README  README.md  TODO  bitbucket-pipelines.yml  configure
benchmarks/tensorflow/: mnist-slp.py
cmake/: 3rdparty.cmake  Findstdnn-ops.cmake  Findstdtensor.cmake  Findstdtracer.cmake
docker/: Dockerfile.dev
docs/: Doxyfile
examples/c/: alexnet.c  cifar_slp.c  mnist_cnn.c  mnist_slp.c  mnist_slp_symbol.c  vgg16.c
examples/cpp/: cifar_cnn.cpp  cifar_mlp.cpp  mnist_mlp.cpp  mnist_slp.cpp
examples/imagenet/: CMakeLists.txt  Makefile  convert-vgg16-weights.py  idx.py  prepare-sample-image.py
examples/imagenet/src/: alexnet.c  alexnet.h  imagenet.cpp  imagenet.h  test-imagenet.cpp  vgg16.c  vgg16.h
examples/python/: mnist_slp.py
include/: crystalnet-ext.h  crystalnet-internal.h  crystalnet.h
include/crystalnet-contrib/darknet/: darknet.h
include/crystalnet-contrib/image/: bmp.hpp
include/crystalnet-contrib/vis/: snapshot.hpp
include/crystalnet-contrib/yolo/: activation.hpp  batch_normalization.hpp  bias_layer.hpp  cmath.h  conv_layer.h  detection.hpp  input.hpp  logistic.h  options.hpp  pool_layer.h  region_layer.h  reorg_layer.h  route_layer.h  yolo.h
include/crystalnet/core/: context.hpp  gc.hpp  idx.hpp  layer.hpp  operator.hpp  shape.hpp  tensor.hpp  user_context.hpp
include/crystalnet/debug/: debug.hpp  tensor.hpp
include/crystalnet/linag/: cblas_impl.hpp  linag.hpp  plain_impl.hpp
include/crystalnet/model/: model.hpp  node.hpp
include/crystalnet/ops/: add.hpp  argmax.hpp  batch.hpp  const.hpp  conv_nhwc.hpp  conv_nhwc_generic.hpp  pool_generic.hpp  softmax.hpp  truncated_normal.hpp  xentropy.hpp
include/crystalnet/symbol/: model.hpp  node.hpp
include/crystalnet/train/: opt_sgd.hpp  optimizer.hpp
include/crystalnet/utility/: enumerate.hpp.txt  range.hpp
langs/go/crystalnet/: .goimportpath  crystalnet.go  lib.go
langs/go/misaka/: .goimportpath  lib.go  misaka.go
langs/python/: crystalnet.py  misaka.py  setup.py
rfc/: rfc005  rfc006  rfc007  rfc010
rfcs/: README  rfc001  rfc002  rfc003  rfc004  rfc007  rfc008  rfc009  rfc011
src/: crystalnet-ext.h  crystalnet-internal.h  crystalnet.h  misaka.h
src/crystalnet/: crystalnet  crystalnet.hpp
src/crystalnet-contrib/darknet/: darknet.c  darknet.cpp  darknet.h
src/crystalnet-contrib/image/: bmp.cpp
src/crystalnet-contrib/vis/: snapshot.cpp  vis.cpp  vis.hpp
src/crystalnet-contrib/yolo/: activation.hpp  batch_normalization.hpp  bias_layer.hpp  cmath.c  conv_layer.cpp  detection.cpp  detection.hpp  input.cpp  logistic.c  main.cpp  options.cpp  pool_layer.cpp  region_layer.cpp  reorg_layer.cpp  route_layer.cpp  yolo.hpp  yolov2.c
src/crystalnet/core/: cast.hpp  context.cpp  context.hpp  core.cpp  debug.cpp  debug.hpp  error.cpp  error.hpp  gc.cpp  gc.hpp  idx.cpp  idx.hpp  initializer.hpp  layer.cpp  mpool.hpp  operator.cpp  operator.hpp  shape.cpp  shape.hpp  tensor.cpp  tensor.hpp  tracer.cpp  tracer.hpp  version.cpp
src/crystalnet/data/: cifar.cpp  cifar.hpp  dataset.cpp  dataset.hpp  idx.cpp  idx.hpp  mnist.cpp  mnist.hpp
src/crystalnet/debug/: debug.cpp  debug.hpp
src/crystalnet/ext/: classifier.cpp  debug.cpp  ext.cpp  traits.cpp  traits.hpp
src/crystalnet/graph/: graph.hpp
src/crystalnet/layers/: conv_nhwc.cpp  conv_nhwc.hpp  dense.cpp  dense.hpp  layer.hpp  layers.cpp  pool.cpp  pool.hpp  relu.cpp  relu.hpp  softmax.cpp  softmax.hpp
src/crystalnet/linag/: base.hpp  cblas_impl.hpp  linag.cpp  linag.hpp  plain_impl.hpp
src/crystalnet/model/: layer.cpp  layer.hpp  model.cpp  model.hpp  node.hpp  operator.cpp  operator.hpp  parameter.hpp  placeholder.hpp
src/crystalnet/ops/: add.hpp  argmax.hpp  batch.hpp  const.hpp  conv.cpp  conv_nhwc.hpp  conv_nhwc_generic.hpp  mul.hpp  ops.cpp  pool.cpp  pool.hpp  pool_generic.hpp  relu.hpp  softmax.hpp  truncated_normal.hpp  xentropy.hpp
src/crystalnet/symbol/: model.hpp  node.hpp  symbol.cpp
src/crystalnet/testing/: testing.cpp
src/crystalnet/train/: agent.hpp  initializers.hpp  opt_adam.cpp  opt_adam.hpp  opt_sgd.cpp  opt_sgd.hpp  optimizer.cpp  optimizer.hpp  trainer.cpp  trainer.hpp  trainer_old.hpp
src/crystalnet/utility/: cast.hpp  enumerate.hpp
src/misaka/: misaka  misaka.hpp
src/misaka/core/: core.cpp  debug.cpp  debug.hpp  error.hpp  gc.cpp  idx.hpp  mpool.hpp  shape.cpp  shape.hpp  shape_test.c  tensor.cpp  tensor.hpp  tensor_test.c  version.cpp
src/misaka/data/: cifar.cpp  cifar.hpp  dataset.cpp  dataset.hpp  idx.cpp  idx.hpp  idx_test.c  mnist.cpp  mnist.hpp
src/misaka/linag/: base.hpp  cblas_impl.hpp  linag.cpp  linag.hpp  plain_impl.hpp  plain_impl_test.cpp
src/misaka/model/: layer.cpp  layer.hpp  model.cpp  model.hpp  node.hpp  operator.cpp  operator.hpp  parameter.hpp  placeholder.hpp
src/misaka/ops/: add.hpp  batch.hpp  conv_nhwc.hpp  mul.hpp  ops.cpp  pool.hpp  relu.hpp  softmax.hpp  xentropy.hpp
src/teavana/: idxfmt.hpp  mnist.hpp  operator.hpp  range.hpp  show.hpp  timer.cpp  timer.hpp  tracer.cpp  tracer.hpp
tests/: .gitignore  CMakeLists.txt  Makefile  enumerate_test.cpp  gen-test-prog.py  mpool_test.cpp  plain_impl_test.cpp  shape_test.c  symbol_test.c  tensor_test.c  test-includes.sh
tests/src/crystalnet/core/: idx_test.cpp  shape_test.c  tensor_test.c
tests/src/crystalnet/data/: idx_test.c
tests/src/crystalnet/layers/: layers_test.c
tests/src/crystalnet/linag/: plain_impl_test.cpp
tests/src/crystalnet/ops/: argmax_test.cpp  conv_test.c  pool_test.c  softmax_test.cpp
tests/src/crystalnet/symbol/: symbol_test.c  symbol_test.cpp
tests/src/crystalnet/utility/: enumerate_test.cpp
utils/: analysis-valgrind-result.rb  check-leak.sh  download-cifar.sh  download-mnist.sh  download-tiny-imagenet.sh  fix-include.sh  test.sh  tidy.sh  yolo-test.sh
utils/light/: CMakeLists.txt  Makefile  README.md  download-yolo-weights.sh
utils/light/src/: light.cpp  options.cpp  options.hpp
(+22 files in other folders)
