CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(crystalnet-test)

SET(CMAKE_CXX_STANDARD 17)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_DEFINITIONS(-funroll-loops)
ADD_DEFINITIONS(-DCRYSTALNET_DEBUG)
ADD_DEFINITIONS(-DENABLE_DEBUG_TIMER)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../include)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../build/${CMAKE_SYSTEM_NAME}/lib)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../3rdparty/include)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../3rdparty/lib)

FILE(GLOB tests src/crystalnet/**/*)
FOREACH(main ${tests})
    GET_FILENAME_COMPONENT(base_name ${main} NAME)
    STRING(REPLACE "." "_" bin_name ${base_name})
    ADD_EXECUTABLE(${bin_name} ${main})
    TARGET_LINK_LIBRARIES(${bin_name} crystalnet)
ENDFOREACH()
